bindings/rust/src/ffi.rs

//! Raw FFI bindings to the zlink C API.
//! This module is crate-internal and not exposed in the public surface.

#![allow(non_camel_case_types, non_upper_case_globals, dead_code)]

use std::ffi::{c_char, c_int, c_long, c_ulong, c_void};

// ---------------------------------------------------------------------------
// Message
// ---------------------------------------------------------------------------

#[repr(C)]
#[derive(Copy, Clone)]
pub struct zlink_msg_t {
    #[cfg(target_pointer_width = "64")]
    _data: [u64; 8],
    #[cfg(target_pointer_width = "32")]
    _data: [u32; 16],
}

#[repr(C)]
#[derive(Copy, Clone, Debug, PartialEq, Eq, Hash)]
pub struct zlink_routing_id_t {
    pub size: u8,
    pub data: [u8; 255],
}

pub type zlink_free_fn = unsafe extern "C" fn(data: *mut c_void, hint: *mut c_void);

pub const ZLINK_MSG_METADATA_KEY_USER_MIN: u16 = 0x0100;
pub const ZLINK_MSG_METADATA_VALUE_MAX: usize = 65535;

// ---------------------------------------------------------------------------
// Context options
// ---------------------------------------------------------------------------

#[repr(C)]
#[derive(Copy, Clone, Debug, PartialEq, Eq)]
pub enum zlink_ctx_option_t {
    ZLINK_IO_THREADS = 1,
    ZLINK_MAX_SOCKETS = 2,
    ZLINK_SOCKET_LIMIT = 3,
    ZLINK_THREAD_SCHED_POLICY = 4,
    ZLINK_MAX_MSGSZ = 5,
    ZLINK_MSG_T_SIZE = 6,
    ZLINK_THREAD_AFFINITY_CPU_ADD = 7,
    ZLINK_THREAD_AFFINITY_CPU_REMOVE = 8,
    ZLINK_THREAD_NAME_PREFIX = 9,
    ZLINK_CTX_OPT_BLOCKY = 10,
}

// ---------------------------------------------------------------------------
// Send flags / result
// ---------------------------------------------------------------------------

pub type zlink_send_flags_t = u32;

pub const ZLINK_DONTWAIT: zlink_send_flags_t = 0x0001;

#[repr(C)]
#[derive(Copy, Clone, Debug, PartialEq, Eq)]
pub enum zlink_send_result_t {
    ZLINK_SEND_RESULT_SENT = 0,
    ZLINK_SEND_RESULT_BACKPRESSURED = 1,
    ZLINK_SEND_RESULT_NOT_READY = 2,
}

#[repr(C)]
#[derive(Copy, Clone, Debug, PartialEq, Eq)]
pub enum zlink_request_result_t {
    ZLINK_REQUEST_RESULT_OK = 0,
    ZLINK_REQUEST_RESULT_TIMED_OUT = 101,
    ZLINK_REQUEST_RESULT_NOT_FOUND = 102,
    ZLINK_REQUEST_RESULT_TERMINATED = 103,
    ZLINK_REQUEST_RESULT_PROTOCOL_ERROR = 104,
}

#[repr(C)]
#[derive(Copy, Clone, Debug, PartialEq, Eq)]
pub enum zlink_config_result_t {
    ZLINK_CONFIG_OK = 0,
    ZLINK_CONFIG_INVALID_HANDLE = 701,
    ZLINK_CONFIG_INVALID_ARGUMENT = 702,
    ZLINK_CONFIG_NOT_SUPPORTED = 703,
}

// ---------------------------------------------------------------------------
// Socket types
// ---------------------------------------------------------------------------

#[repr(C)]
#[derive(Copy, Clone, Debug, PartialEq, Eq)]
pub enum zlink_socket_type_t {
    ZLINK_SOCKET_PAIR = 0x1001,
    ZLINK_SOCKET_PUB = 0x1002,
    ZLINK_SOCKET_SUB = 0x1003,
    ZLINK_SOCKET_DEALER = 0x1004,
    ZLINK_SOCKET_ROUTER = 0x1005,
    ZLINK_SOCKET_XPUB = 0x1006,
    ZLINK_SOCKET_XSUB = 0x1007,
    ZLINK_SOCKET_STREAM = 0x1008,
}

// ---------------------------------------------------------------------------
// Socket options
// ---------------------------------------------------------------------------

#[repr(C)]
#[derive(Copy, Clone, Debug, PartialEq, Eq)]
pub enum zlink_option_t {
    ZLINK_OPT_AFFINITY = 0x3001,
    ZLINK_OPT_RATE = 0x3003,
    ZLINK_OPT_RECOVERY_IVL = 0x3004,
    ZLINK_OPT_SNDBUF = 0x3005,
    ZLINK_OPT_RCVBUF = 0x3006,
    ZLINK_OPT_MAXMSGSIZE = 0x300E,
    ZLINK_OPT_SNDHWM = 0x300F,
    ZLINK_OPT_RCVHWM = 0x3010,
    ZLINK_OPT_LINGER = 0x300A,
    ZLINK_OPT_RECONNECT_IVL = 0x300B,
    ZLINK_OPT_BACKLOG = 0x300C,
    ZLINK_OPT_RECONNECT_IVL_MAX = 0x300D,
    ZLINK_OPT_MULTICAST_HOPS = 0x3011,
    ZLINK_OPT_RCVTIMEO = 0x3012,
    ZLINK_OPT_SNDTIMEO = 0x3013,
    ZLINK_OPT_CONNECT_TIMEOUT = 0x3024,
    ZLINK_OPT_HANDSHAKE_IVL = 0x301D,
    ZLINK_OPT_TCP_KEEPALIVE = 0x3015,
    ZLINK_OPT_TCP_KEEPALIVE_CNT = 0x3016,
    ZLINK_OPT_TCP_KEEPALIVE_IDLE = 0x3017,
    ZLINK_OPT_TCP_KEEPALIVE_INTVL = 0x3018,
    ZLINK_OPT_TCP_MAXRT = 0x3025,
    ZLINK_OPT_TCP_NODELAY = 0x3031,
    ZLINK_OPT_HEARTBEAT_IVL = 0x3021,
    ZLINK_OPT_HEARTBEAT_TTL = 0x3022,
    ZLINK_OPT_HEARTBEAT_TIMEOUT = 0x3023,
    ZLINK_OPT_IPV6 = 0x301A,
    ZLINK_OPT_TOS = 0x301C,
    ZLINK_OPT_MULTICAST_MAXTPDU = 0x3026,
    ZLINK_OPT_BINDTODEVICE = 0x3027,
    ZLINK_OPT_TLS_CERT = 0x3028,
    ZLINK_OPT_TLS_KEY = 0x3029,
    ZLINK_OPT_TLS_CA = 0x302A,
    ZLINK_OPT_TLS_VERIFY = 0x302B,
    ZLINK_OPT_TLS_REQUIRE_CLIENT_CERT = 0x302C,
    ZLINK_OPT_TLS_HOSTNAME = 0x302D,
    ZLINK_OPT_TLS_TRUST_SYSTEM = 0x302E,
    ZLINK_OPT_TLS_PASSWORD = 0x302F,
    ZLINK_OPT_IMMEDIATE = 0x3019,
    ZLINK_OPT_CONFLATE = 0x301B,
    ZLINK_OPT_BLOCKY = 0x301E,
    ZLINK_OPT_INVERT_MATCHING = 0x3020,
    ZLINK_OPT_FD = 0x3007,
    ZLINK_OPT_EVENTS = 0x3008,
    ZLINK_OPT_TYPE = 0x3009,
    ZLINK_OPT_LAST_ENDPOINT = 0x3014,
    ZLINK_OPT_ZMP_METADATA = 0x3030,
    ZLINK_OPT_DISCOVERY_METADATA_MAX_SIZE = 0x3032,
}

#[repr(C)]
#[derive(Copy, Clone, Debug, PartialEq, Eq)]
pub enum zlink_router_option_t {
    ZLINK_ROUTER_OPT_MANDATORY = 0x3101,
    ZLINK_ROUTER_OPT_HANDOVER = 0x3102,
    ZLINK_ROUTER_OPT_PROBE = 0x3103,
    ZLINK_ROUTER_OPT_CONNECT_ROUTING_ID = 0x3104,
}

#[repr(C)]
#[derive(Copy, Clone, Debug, PartialEq, Eq)]
pub enum zlink_dealer_option_t {
    ZLINK_DEALER_OPT_PROBE = 0x3201,
}

#[repr(C)]
#[derive(Copy, Clone, Debug, PartialEq, Eq)]
pub enum zlink_pub_option_t {
    ZLINK_PUB_OPT_VERBOSE = 0x3301,
    ZLINK_PUB_OPT_VERBOSER = 0x3302,
    ZLINK_PUB_OPT_MANUAL = 0x3303,
    ZLINK_PUB_OPT_MANUAL_LAST_VALUE = 0x3304,
    ZLINK_PUB_OPT_NODROP = 0x3305,
    ZLINK_PUB_OPT_WELCOME_MSG = 0x3306,
    ZLINK_PUB_OPT_TOPICS_COUNT = 0x3307,
    ZLINK_PUB_OPT_APPROVE_SUBSCRIBE = 0x3308,
    ZLINK_PUB_OPT_REJECT_SUBSCRIBE = 0x3309,
}

#[repr(C)]
#[derive(Copy, Clone, Debug, PartialEq, Eq)]
pub enum zlink_sub_option_t {
    ZLINK_SUB_OPT_TOPICS_COUNT = 0x3400,
}

#[repr(C)]
#[derive(Copy, Clone, Debug, PartialEq, Eq)]
pub enum zlink_stream_option_t {
    ZLINK_STREAM_OPT_NOTIFY = 0x3501,
}

// ---------------------------------------------------------------------------
// Monitor types
// ---------------------------------------------------------------------------

pub type zlink_socket_monitor_event_mask_t = u32;

pub const ZLINK_SOCKET_MONITOR_EVENT_CONNECTED: u32 = 0x0001;
pub const ZLINK_SOCKET_MONITOR_EVENT_CONNECT_DELAYED: u32 = 0x0002;
pub const ZLINK_SOCKET_MONITOR_EVENT_CONNECT_RETRIED: u32 = 0x0004;
pub const ZLINK_SOCKET_MONITOR_EVENT_LISTENING: u32 = 0x0008;
pub const ZLINK_SOCKET_MONITOR_EVENT_BIND_FAILED: u32 = 0x0010;
pub const ZLINK_SOCKET_MONITOR_EVENT_ACCEPTED: u32 = 0x0020;
pub const ZLINK_SOCKET_MONITOR_EVENT_ACCEPT_FAILED: u32 = 0x0040;
pub const ZLINK_SOCKET_MONITOR_EVENT_CLOSED: u32 = 0x0080;
pub const ZLINK_SOCKET_MONITOR_EVENT_CLOSE_FAILED: u32 = 0x0100;
pub const ZLINK_SOCKET_MONITOR_EVENT_DISCONNECTED: u32 = 0x0200;
pub const ZLINK_SOCKET_MONITOR_EVENT_MONITOR_STOPPED: u32 = 0x0400;
pub const ZLINK_SOCKET_MONITOR_EVENT_ALL: u32 = 0x7FFF;
pub const ZLINK_SOCKET_MONITOR_EVENT_HANDSHAKE_FAILED_NO_DETAIL: u32 = 0x0800;
pub const ZLINK_SOCKET_MONITOR_EVENT_CONNECTION_READY: u32 = 0x1000;
pub const ZLINK_SOCKET_MONITOR_EVENT_HANDSHAKE_FAILED_PROTOCOL: u32 = 0x2000;
pub const ZLINK_SOCKET_MONITOR_EVENT_HANDSHAKE_FAILED_AUTH: u32 = 0x4000;

#[repr(C)]
#[derive(Copy, Clone, Debug, PartialEq, Eq)]
pub enum zlink_disconnect_reason_t {
    ZLINK_DISCONNECT_REASON_UNKNOWN = 0,
    ZLINK_DISCONNECT_REASON_HANDSHAKE_FAILED = 3,
    ZLINK_DISCONNECT_REASON_TRANSPORT_ERROR = 4,
    ZLINK_DISCONNECT_REASON_CTX_TERM = 5,
}

#[repr(C)]
#[derive(Copy, Clone, Debug, PartialEq, Eq)]
pub enum zlink_protocol_error_t {
    ZLINK_PROTOCOL_ERROR_ZMP_MALFORMED_COMMAND_HELLO = 0x10000013,
}

#[repr(C)]
#[derive(Copy, Clone)]
pub struct zlink_monitor_event_t {
    pub event: u64,
    pub value: u64,
    pub routing_id: zlink_routing_id_t,
    pub local_addr: [c_char; 256],
    pub remote_addr: [c_char; 256],
}

pub type zlink_socket_monitor_event_t = zlink_monitor_event_t;

pub type zlink_monitor_handler_fn =
    unsafe extern "C" fn(event: *const zlink_monitor_event_t, userdata: *mut c_void);
pub type zlink_socket_monitor_handler_fn = zlink_monitor_handler_fn;

#[repr(C)]
#[derive(Copy, Clone)]
pub struct zlink_socket_monitor_open_options_t {
    pub events: zlink_socket_monitor_event_mask_t,
}

#[repr(C)]
#[derive(Copy, Clone, Debug, PartialEq, Eq)]
pub enum zlink_monitor_source_kind_t {
    ZLINK_MONITOR_SOURCE_SOCKET = 1,
    ZLINK_MONITOR_SOURCE_SPOT_PUB = 3,
    ZLINK_MONITOR_SOURCE_SPOT_SUB = 4,
}

pub type zlink_monitor_state_mask_t = u32;
pub type zlink_monitor_snapshot_detail_mask_t = u32;

pub const ZLINK_MONITOR_STATE_READY: u32 = 1 << 0;
pub const ZLINK_MONITOR_STATE_BOUND_READY: u32 = 1 << 1;
pub const ZLINK_MONITOR_STATE_CLOSED: u32 = 1 << 3;

pub const ZLINK_MONITOR_SNAPSHOT_DETAIL_SND_PENDING_MSGS: u32 = 1 << 1;
pub const ZLINK_MONITOR_SNAPSHOT_DETAIL_RCV_PENDING_MSGS: u32 = 1 << 2;

#[repr(C)]
#[derive(Copy, Clone)]
pub struct zlink_monitor_snapshot_t {
    pub source_kind: zlink_monitor_source_kind_t,
    pub state_flags: zlink_monitor_state_mask_t,
    pub detail_flags: zlink_monitor_snapshot_detail_mask_t,
    pub snd_pending_msgs: u64,
    pub rcv_pending_msgs: u64,
}

// ---------------------------------------------------------------------------
// Callback function pointer types
// ---------------------------------------------------------------------------

pub type zlink_socket_msg_handler_fn = unsafe extern "C" fn(
    source_rid: *const zlink_routing_id_t,
    parts: *mut zlink_msg_t,
    part_count: usize,
    userdata: *mut c_void,
);

pub type zlink_subscribe_handler_fn = unsafe extern "C" fn(
    source_rid: *const zlink_routing_id_t,
    topic: *const c_char,
    topic_len: usize,
    parts: *mut zlink_msg_t,
    part_count: usize,
    userdata: *mut c_void,
);

pub type zlink_send_ready_handler_fn =
    unsafe extern "C" fn(subject: *mut c_void, userdata: *mut c_void);

pub type zlink_reply_handler_fn = unsafe extern "C" fn(
    result: zlink_request_result_t,
    parts: *mut zlink_msg_t,
    part_count: usize,
    userdata: *mut c_void,
);

pub type zlink_router_handler_fn = unsafe extern "C" fn(
    source_node_rid: *const zlink_routing_id_t,
    source_spot_rid: *const zlink_routing_id_t,
    request_seq: u64,
    parts: *mut zlink_msg_t,
    part_count: usize,
    userdata: *mut c_void,
);

pub type zlink_spot_handler_fn = unsafe extern "C" fn(
    source_rid: *const zlink_routing_id_t,
    spot_rid: *const zlink_routing_id_t,
    request_seq: u64,
    parts: *mut zlink_msg_t,
    part_count: usize,
    userdata: *mut c_void,
);

#[repr(C)]
#[derive(Copy, Clone, Debug, PartialEq, Eq)]
pub enum zlink_spot_dispatch_event_t {
    ZLINK_SPOT_DISPATCH_EVENT_SUBSCRIBE_READABLE = 1,
    ZLINK_SPOT_DISPATCH_EVENT_ROUTED_READABLE = 2,
    ZLINK_SPOT_DISPATCH_EVENT_TIMER_READABLE = 3,
}

pub type zlink_spot_dispatch_event_handler_fn = unsafe extern "C" fn(
    spot: *mut c_void,
    event: zlink_spot_dispatch_event_t,
    userdata: *mut c_void,
);

// ---------------------------------------------------------------------------
// Service discovery types
// ---------------------------------------------------------------------------

#[repr(C)]
#[derive(Copy, Clone, Debug, PartialEq, Eq)]
pub enum zlink_service_type_t {
    ZLINK_SERVICE_TYPE_SPOT = 0x3002,
    ZLINK_SERVICE_TYPE_SOCKET = 0x3003,
}

#[repr(C)]
#[derive(Copy, Clone, Debug, PartialEq, Eq)]
pub enum zlink_service_role_t {
    ZLINK_SERVICE_ROLE_INVALID = 0,
    ZLINK_SERVICE_ROLE_SPOT = 2,
    ZLINK_SERVICE_ROLE_ROUTER = 3,
    ZLINK_SERVICE_ROLE_DEALER = 4,
    ZLINK_SERVICE_ROLE_PUB = 5,
    ZLINK_SERVICE_ROLE_SUB = 6,
}
